ch weporter; fixed authorship

--- a/tex/main/evaluation.tex
+++ b/tex/main/evaluation.tex
@@ -54,9 +54,11 @@ The first trial presented test group users with a first part in the bottom seque
 Our main experiments use the system framework described in section \ref{sec:weporter_implementation} for the preparation and presentation of video content, data capture from user interaction and storage of interaction data. The experiments we report on here are based on the interactions from a total of 68 persons over a period of a week.
 
 \section{Setup}
-For our main experiments we use a set of 10 unedited, user-generated videos that were returned in response to a query for ``Diamond Jubilee London'' on YouTube. The videos along with their title, length and current view count is shown in table \ref{videos}. As mentioned in section \ref{sec:weporter_implementation}, we divide source videos into video parts of equal length and generate two sequences consisting of an equal number of video parts to present in parallel. In our main experiments 
+For our main experiments we use a set of 10 unedited, user-generated videos that were returned in response to the query ``Diamond Jubilee London'' on YouTube. The videos along with their title, length and view count at time of retrieval is shown in table \ref{videos}. As mentioned in section \ref{sec:weporter_implementation}, we divide source videos into video parts of equal length and generate two sequences consisting of an equal number of video parts to present in parallel. In our main experiments 
 
-% TODO Table
+[TODO]
+
+
 \begin{table}
    % \begin{tabular}{ | l | l | p{8cm} | p{1.3cm} | l |}
    \begin{tabular}{ | l | l | p{8cm} | p{1.3cm} | l |}
