--- a/tex/main/weporter.tex
+++ b/tex/main/weporter.tex
@@ -1,7 +1,7 @@
 \chapter{Human Computed Stories in wePorter}
 \label{chap:weporter}
 
-[draft]
+
 
 % [intro: sketch wePorter scenario. YouTube: Burning Man 1.7 million, Burning Man 2012 ..., Burning Man this month ...]
 % 
@@ -78,7 +78,7 @@ Goal of a person's query in this kind of navigation is no longer defined in a si
 
 \subsubsection{Encapsulated Wander}
 % TODO ref \cite{Smeulders:2000tx} compare to `association based search' + "most hampered by the semantic gap""
-Considering the three categories of user motivation above, another, composite motive can be imagined. Users often start with a query for a particular topic, followed by a journey across many videos relating to their search term. Their navigation seems unarticulated but it is encapsulated by the topic of their query. Think of someone who wants to get an overview of a large music festival she recently attended. Big events where many people record videos, are often massively covered on UGVC platforms, resulting in an overload of visual information. Searching YouTube for this month's videos from the participatory festival Burning Man, two weeks after it ended, returns ``About 7,660 results''\cite{youtubeBM}. A similar large set of topically related UGVC can be imagined at a website that asks participants to contribute their videos recorded at a recent event or centred around a particular topic.
+Considering the three categories of user motivation above, another, composite motive can be thought of. Users often start with a query for a particular topic, followed by a journey across many videos relating to their search term. Their navigation seems unarticulated but it is encapsulated by the topic of their query. Think of someone who wants to get an overview of a large music festival she recently attended. Big events where many people record videos, are often massively covered on UGVC platforms, resulting in an overload of visual information. Searching YouTube for this month's videos from the participatory festival Burning Man, two weeks after it ended, returns ``About 7,660 results''\cite{youtubeBM}. A similar large set of topically related UGVC can be imagined at a website that asks participants to contribute their videos recorded at a recent event or centred around a particular topic.
 
 This kind of `broad queries' returns a result set of related content in which a user will probably consider many items as a successful retrieval. Furthermore, one could even say that the desired result of a user's query is spread across the multiple pieces of content. By traversing the space of different videos in the result set, users interactively construct the desired answers to their own queries. We call this motivation for discovery within a topically-related set of videos `encapsulated wander'.
 
@@ -195,16 +195,16 @@ Surveying the diverse body of research into interactive TV, Cesar and Chorianopo
 
 \subsubsection{The Death of the Author, the Birth of Collective Creation}
 % intro
-The first part of the title above was originally voiced by Roland Barthes in a 1968 essay bearing the phrase as its title, in which he contemplates the role of the author in literary writing\cite{Barthes:1977wq}. His title `the death of the author' points to his criticism to the importance that typically gets associated to the author in the analysis of literary work. To Barthes, a text is not ``the “message” of the Author-God'', but rather ``a multi-dimensional space in which a variety of writings, none of them original, blend and clash. The text is a tissue of quotations drawn from the innumerable centers of culture''. Instead of the author, for Barthes, it is the reader where the diverse backgrounds of text become unified. Barthes' criticism is resolute:
+The first part of the title above was originally voiced by Roland Barthes in a 1968 essay bearing the phrase as its title, in which he contemplates the role of the author in literary writing\cite{Barthes:1977wq}. His title `the death of the author' points to his criticism to the importance that typically gets associated to the author in the analysis of literary work. To Barthes, a text is not ``the \“message\” of the Author-God'', but rather ``a multi-dimensional space in which a variety of writings, none of them original, blend and clash. The text is a tissue of quotations drawn from the innumerable centers of culture''. Instead of the author, for Barthes, it is the reader where the diverse backgrounds of text become unified. Barthes' criticism is resolute:
 
 \begin{quote}
   ``the birth of the reader must be at the cost of the death of the Author''
 \end{quote}
 
-In our aim of reconfiguring interesting sub-clips into a new arrangement, the changing role of the author surfaces in a new context.
+In our aim of reconfiguring interesting sub-clips into a new arrangement, the changing role of the author surfaces in a new context. Barthes' thoughts are relevant in two ways. First because he sees an author's work as the reconfiguration of previous works. Second because he assigns the reader (spectator, viewer, listener, etc) the important role of central interpreter. This links to the contextual nature of human perception discussed in section \ref{sec:challenges_in_interpretation} as well as the active role a reader takes in the construction of a coherent story. Explicit reconfigurations of video content may be a way to provide users with a basis from which they `enact' their own interpretation of a story or a depicted event.
 
 % less restrictiv licensing -> remixing
-Less restrictive forms of digital content licensing, like Creative Commons (CC), mean that it is now possible for content uploaded by its original creator, to be used under specified conditions in a new piece of work by someone else. This kind of licences has been noted to be an important facilitator of research into Human Computation\cite{Law:2009vl}. They make it possible for works not only to be used and remixed by other individuals, but also to be incorporated in algorithmically constructed reconfigurations of user generated content.
+(Co-)authoring by means of reconfiguration or \emph{`remixing'} is common practice in today's vivid content sharing communities \cite{Diakopoulos:2007jn} and an important factor in these relatively new forms of creation seems to be attribution\cite{Luther:2010wq}. Although classically intellectual property licences mostly have a restrictive function (protecting my intellectual property from being exploited), new less restrictive licences also offer a way of attribution in digital content that is derived from external sources. Less restrictive forms of digital content licensing, like Creative Commons (CC), mean that it is now possible for content uploaded by its original creator, to be used under specified conditions in a new piece of work by someone else. This kind of licences has been noted to be an important facilitator of research into Human Computation\cite{Law:2009vl}. They make it possible for works not only to be used and remixed by other individuals, but also to be incorporated in algorithmically constructed reconfigurations of user generated content.
 
 % popularity CC
 Different video platforms are currently offering less-restrictive CC licensing as an integrated part of their services. YouTube currently offers the option of choosing a most basic attribution licence and reports 4 million videos licensed this way \cite{YouTubeCC}. The video platform Vimeo focusses on letting video and animation producers share and showcase their original work. The platform has internalized the use of CC from 2010\cite{vimeoTimeline} and many of their users licence their videos such that they can be remixed by others. Figure \ref{fig:vimeoCC} shows that a large part of the licences on the Vimeo platform allow derivatives to be made\cite{vimeoCC}.
